--- a/templates/files.html
+++ b/templates/files.html
@@ -5,7 +5,7 @@
     <h1>Files</h1>
     <ul>
         {% for file in files %}
-            <li><a href="{{ url_for('download_file', filename=file) }}">{{ file }}</a></li>
+            <li><a href="{{ url_for('serve_file', filename=file) }}" target="_blank">{{ file }}</a></li>
         {% endfor %}
     </ul>
 </body>
