--- a/templates/files.html
+++ b/templates/files.html
@@ -1,11 +1,15 @@
-<!doctype html>
-<html>
-<head><title>Files</title></head>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Archivos Subidos</title>
+</head>
 <body>
-    <h1>Files</h1>
+    <h1>Archivos Subidos</h1>
     <ul>
         {% for file in files %}
-            <li><a href="{{ url_for('serve_file', filename=file) }}" target="_blank">{{ file }}</a></li>
+        <li><a href="{{ url_for('serve_file', filename=file) }}">{{ file }}</a></li>
         {% endfor %}
     </ul>
 </body>
